tests/ui/type/type-arg-out-of-scope.stderr
error[E0401]: can't use generic parameters from outer item
  --> $DIR/type-arg-out-of-scope.rs:2:29
   |
LL | fn foo<T>(x: T) {
   |        - type parameter from outer item
LL |     fn bar(f: Box<dyn FnMut(T) -> T>) { }
   |           -                 ^ use of generic parameter from outer item
   |           |
   |           help: try introducing a local generic parameter here: `<T>`

error[E0401]: can't use generic parameters from outer item
  --> $DIR/type-arg-out-of-scope.rs:2:35
   |
LL | fn foo<T>(x: T) {
   |        - type parameter from outer item
LL |     fn bar(f: Box<dyn FnMut(T) -> T>) { }
   |           -                       ^ use of generic parameter from outer item
   |           |
   |           help: try introducing a local generic parameter here: `<T>`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0401`.
